[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repl_client"
version = "0.0.1"
authors = [
  { name="Peter-Frank Spierenburg", email="spierepf@hotmail.com" },
]
description = "A client for micropython's REPL"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/spierepf/repl_client"
"Bug Tracker" = "https://github.com/spierepf/repl_client/issues"
